# VandyGuessr

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  docker-compose.dev.yml  docker-compose.yml
.github/: pull_request_template.md
.github/workflows/: ci.yml
apps/api/: .env.example  Dockerfile  pyproject.toml
apps/api/app/: __init__.py  config.py  container.py  main.py
apps/api/app/core/: auth.py  (+1 more)
apps/api/data/: campus_buildings.geojson  leaderboard_seed.json
apps/api/scripts/: backfill_image_compression.py  backfill_image_thumbnails.py  backfill_image_tiles.py  bootstrap_multiplayer.py  seed_demo.py  seed_leaderboard.py  seed_locations.py
apps/web/: .env.example  Dockerfile  biome.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
apps/web/src/: App.svelte  app.css  routes.ts  vite-env.d.ts
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/api/v1/: router.py
backend/app/core/: auth.py  database.py  redis.py
backend/app/services/: exif.py
docs/: ARCHITECTURE.md  AUTH_SETUP.md  AZURE_AUTH_SETUP.md  DESIGN.md  MULTIPLAYER.md  PRD.md  WIREFRAMES.md
docs/mockups/round10/: 00-foundation.html  01-login.html  02-home.html  03-gameplay.html  04-round-results.html  05-leaderboard.html  06-game-summary.html  07-end-game-dialog.html  08-lobby.html  09-countdown.html  10-multiplayer-gameplay.html  11-multiplayer-round-results.html  12-multiplayer-game-over.html
frontend/: package.json  tailwind.config.js
frontend/src/: app.css  vite-env.d.ts
(+213 files in other folders)
